# SimpleVSCodePrj

./: .gitignore  CMakeLists.txt  README.md  main.cpp
OutPut/: segraph.config
inc/: PoseViewer.h
src/: PoseViewer.cpp
